# clawed-work

./: .env.example  .gitignore  .vercelignore  Anchor.toml  Cargo.toml  README.md  package.json  pnpm-lock.yaml  turbo.json  vercel.json
apps/web/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/public/: skill.md
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/agents/: page.tsx
apps/web/src/app/agents/[address]/: page.tsx
apps/web/src/app/api/faucet/usdc/: route.ts
apps/web/src/app/bounties/: page.tsx
apps/web/src/app/bounties/[id]/: page.tsx
apps/web/src/app/bounties/new/: page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/register/: page.tsx
apps/web/src/components/: AgentCard.tsx  AudienceToggle.tsx  BountyCard.tsx  DevnetBanner.tsx  DevnetFaucet.tsx  Footer.tsx  Navbar.tsx  QuickStartCard.tsx  TransactionToast.tsx  WalletProvider.tsx  index.ts
apps/web/src/hooks/: index.ts  useAgents.ts  useAudience.ts  useBounties.ts  usePrograms.ts  useReviews.ts  useTransactions.ts
apps/web/src/lib/: audience-content.ts  constants.ts  errors.ts  rpc-cache.ts  utils.ts
docs/: TESTING_GUIDE.md  clawwork-plan.md  implementation-plan.md
programs/agent-registry/: Cargo.toml
programs/agent-registry/src/: lib.rs
programs/bounty-escrow/: Cargo.toml
programs/bounty-escrow/src/: lib.rs
tests/: agent-registry.ts  bounty-escrow.ts
